# product

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
notebooks/: model_demo.ipynb
product/: __init__.py
product/api/: data_model.py  main.py
product/model/: core.py
product/model/jobs/: training.py
product/model/scripts/: training.py
product/utils/: get_data.py
tests/: conftest.py
tests/e2e/: test_e2e.py
tests/integration/: test_training_to_api.py
tests/unit/api/: test_datamodel.py  test_endpoints.py
tests/unit/model/: test_modelclass.py  test_modelinterface.py  test_training.py  test_training_job.py
tests/unit/utils/: test_simulate_data.py
