[project]
name = "product"
version = "0.1.0"
authors = [{name="Lars Kjeldgaard"}]
description = "Product based on machine learning"
readme = "README.md"
requires-python = "<3.12"
dynamic = [
    "dependencies",
    "optional-dependencies",
]

[project.scripts]
train_model = "product.model.jobs.training_job:run"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}

[build-system]
requires = [
  "setuptools",
  "wheel",
  ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["product*"]

[tool.pytest.ini_options]
addopts = "--basetemp=tests/.tmp -v --disable-warnings"

[tool.coverage.run]
source = [
  'product'
]
omit = [
  '__init__.py'
]

[tool.coverage.report]
skip_empty = true
fail_under = 80
